tiny footer change

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	<table class="table">
 	  <tr>
 	  	<th>Dates</th>
-	  	<td><p>June 22nd to August 15th</p></td>
+	  	<td><p>June 22nd to August 15th, 2020</p></td>
 	  </tr>
 	  <tr>
 	  	<th>Meeting times</th>
@@ -231,7 +231,6 @@
 
 <footer id="footer">
 	<img src="logos-t/big-ideas-xs.png" alt="Big Ideas logo">
-	<p>2020</p>
 </footer>
 
 <script
