new email and celine

--- a/index.html
+++ b/index.html
@@ -175,12 +175,12 @@
 		</div>
 		<div>
 			<div class="person">
-				<img src="logos/big-ideas-md-sq.png" alt="Celine Ertekin">
+				<img src="images/team/celine.jpg" alt="Celine Ertekin">
 				<div class="bio">
 					<h3>Celine Ertekin</h3>
 					<h4>Logistics & Communication Director</h4>
 					<h4><a href="mailto:certekin@ucsc.edu">certekin@ucsc.edu</a></h4>
-				<p>Celine is a Neuroscience major at UC Santa Cruz.</p>
+				<p>Celine is a Neuroscience major at UC Santa Cruz. She aspires to attend medical school and go into the medical field. She plays for the UCSC women’s soccer team, enjoys playing piano and learning how to play the guitar in her free time. She spends a lot of time hiking and at the beach.</p>
 				</div>
 			</div>
 		</div>
@@ -225,7 +225,7 @@
 <div class="container-out" id="contact">
 <div class="container">
 	<h1>Contact</h1>
-	<p>For any questions or comments, please email one of our team members above!</p>
+	<p>For general inquiries, email <a href="mailto:global.issues.seminar2020@gmail.com">global.issues.seminar2020@gmail.com</a>. Otherwise, contact a specific team member with their email above.</p>
 </div>
 </div>
 
