mobile nav for edge

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <meta name="description" 
+	content="Big Ideas is a volunteer-run, free online summer program for incoming 9th and 10th-grade students that promotes discourse and awareness about key global issues.">
+
+
 	<link rel="icon" type="image/png" href="logos-t/favicon.png">
 	<link rel="stylesheet" type="text/css" href="scripts/slick-1.8.1/slick/slick.css"/>
 
