--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 	<img src="images/utility/ice-cream-menu.svg" id="mobile-menu">
 	<nav id="nav">
 		<ul>
-			<li class="nav-item active"><a href="#about">About</a></li>
+			<li class="nav-item"><a href="#about">About</a></li>
 			<li class="nav-item"><a href="#program">Program</a></li>
+			<li class="nav-item"><a href="#faq">FAQ</a></li>
 			<li class="nav-item"><a href="#signup">Sign Up</a></li>
 			<li class="nav-item"><a href="#volunteer">Volunteer</a></li>
 			<li  class="nav-item"><a href="#team">Team</a></li>
@@ -143,6 +144,24 @@
 	  </tr>
 	  
 	</table>
+	</div>
+</div>
+</div>
+
+<div class="container-out" id="faq">
+<div class="container">
+	<h1>Frequently Asked Questions</h1>
+	<div class="qa-box">
+		<p class="question">What information about students do you collect and what measures are taken to ensure safety/privacy?</p>
+		<p>We collect only student & parent emails to communicate and send reminders and schedules. Only three people will have access to the emails: the program director, the communications director & the student's facilitator. We take privacy very seriously and will not share student or parent information with anyone else. Parents will be CC'd on any individual emails to students and will also receive updates about the program. </p>
+	</div>
+	<div class="qa-box">
+		<p class="question">Does everyone who signs up automatically accepted into the program or is there a selection process?</p>
+		<p>Everyone who signs up, and attends the mandatory information session is accepted into the program. With that said, please still put effort into the questions as it will impact our planning & curriculum for the program.</p>
+	</div>
+	<div class="qa-box">
+		<p class="question">Do you have a political agenda or leaning?</p>
+		<p>We are very intentionally a non-partisan group, and take bias very seriously. However, instead of avoiding controversy, we aim to give multiple perspectives to students and also allow them to come up with their own ideas and opinions. We have a curriculum development team that thinks very carefully about the topics, materials, and questions.</p>
 	</div>
 </div>
 </div>
