--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <div class="container-out" id="about">
 <div class="container">
 	<h1>About</h1>
-	<p>Big Ideas is a volunteer-run, <b>free</b> online summer program for incoming 9th and 10th-grade students that promotes discourse and awareness about key global issues. Through the eight week session, students meet online 2 to 3 times each week for seminars led by college facilitators and discuss a new global issue each session- from the ethics of genetic engineering to economic inequality. Students have a chance to pose ethical questions, share their perspectives, and hear different ideas and stories. We are an interdisciplinary program, connecting and discussing issues in STEM, humanities, and the social sciences.</p>
+	<p>Big Ideas is a volunteer-run, <b>free</b> online summer program for incoming 9th and 10th-grade students that promotes discourse and awareness about key global issues. Through the eight week session, students meet online each week for a seminar led by college facilitators and discuss a new global issue each session- from the ethics of genetic engineering to economic inequality. Students have a chance to pose ethical questions, share their perspectives, and hear different ideas and stories. We are an interdisciplinary program, connecting and discussing issues in STEM, humanities, and the social sciences.</p>
 	<p>Why? 78% of teachers believe critical thinking as the most important skill a high school student can have. But if you remember back to memorizing vocabulary words for the SAT or cramming formulas for an AP exam,  school & the college admissions process doesn't always promote that kind of thinking.</p>
 	<p>Our goal is to get students to think critically and deal with ambiguity. Issues are complex, messy, and nuanced and that's what makes learning so interesting!</p>
 	<h2>Goals</h2>
@@ -113,8 +113,8 @@
 	  	<td><p>June 22nd to August 15th, 2020</p></td>
 	  </tr>
 	  <tr>
-	  	<th>Meeting times</th>
-	  	<td><p>TBD, multiple session times will be offered</p></td>
+	  	<th>Meeting times (PST)</th>
+	  	<td><p>Monday 1-2pm or Friday 2:30-3:30pm</p></td>
 	  </tr>
 	  <tr>
 	  	<th>Student eligibility</th>
@@ -133,7 +133,7 @@
 	  	<th>Program components</th>
 	  	<td>
 	  		<ul>
-	  		<li>Two 1-hour seminar sessions/week</li>
+	  		<li>One 1-hour seminar sessions/week</li>
 			<li>1 hr open office hours to discuss/delve into issues in depth</li>
 			<li>Periodic guest speaker events by researchers, or industry professionals</li>
 			<li>Capstone group project- independent project where students analyze and understand a global issue relevant to their community</li>
@@ -258,7 +258,7 @@
 <div class="container-out" id="contact">
 <div class="container">
 	<h1>Contact</h1>
-	<p>For general inquiries, email <a href="mailto:global.issues.seminar2020@gmail.com">global.issues.seminar2020@gmail.com</a>. Otherwise, contact a specific team member with their email above.</p>
+	<p>For general inquiries, email <a href="mailto:global.issues.seminar2020@gmail.com">global.issues.seminar2020@gmail.com</a>. Otherwise, contact a specific team member with their email above. You can also message our facebook page: <a href="https://www.facebook.com/bigideasglobalseminar" target="_blank">@bigideasglobalseminar</a>.</p>
 </div>
 </div>
 
