--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 	<table class="table">
 	  <tr>
 	  	<th>Dates</th>
-	  	<td><p>June 22nd to August 15th, 2020</p></td>
+	  	<td><p>June 29th to August 15th, 2020</p></td>
 	  </tr>
 	  <tr>
 	  	<th>Meeting times (PST)</th>
