--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 	  	<th>Student eligibility</th>
 	  	<td>
 	  		<ul>
-	  		<li>Incoming 9th or 10th grader</li>
+	  		<li>Incoming 9th to 11th grader</li>
 			<li>Have a stable internet connection </li>
 			<li>Fluent in English</li>
 			<li>Excited to engage & grapple with questions & ideas about global issues</li>
