--- a/index.html
+++ b/index.html
@@ -69,8 +69,11 @@
 	<div class="land-text-box">
 		<div>
 		<h1>Big Ideas: Global Issues Seminar</h1>
-		<h2>June 22 to August 15</h2>
-		<a href="https://tinyurl.com/bigideas2020signup" target="_blank" class="button">Sign Up</a></div>
+		<h2>Mid-September 2020 to Mid-December 2020</h2>
+		<div>
+			<a href="https://tinyurl.com/bigideasfall2020" target="_blank" class="button">Sign Up</a>
+	</div>
+	</div>
 	</div>
 	</div>
 </div>
@@ -110,11 +113,11 @@
 	<table class="table">
 	  <tr>
 	  	<th>Dates</th>
-	  	<td><p>June 29th to August 15th, 2020</p></td>
+	  	<td><p>Mid-September 2020 to Mid-December 2020 (tentative)</p></td>
 	  </tr>
 	  <tr>
 	  	<th>Meeting times (PST)</th>
-	  	<td><p>Monday 1-2pm or Friday 2:30-3:30pm</p></td>
+	  	<td><p>TBD, multiple session times will be offered</p></td>
 	  </tr>
 	  <tr>
 	  	<th>Student eligibility</th>
@@ -133,7 +136,7 @@
 	  	<th>Program components</th>
 	  	<td>
 	  		<ul>
-	  		<li>One 1-hour seminar sessions/week</li>
+	  		<li>Two 45-minute seminar sessions/week</li>
 			<li>1 hr open office hours to discuss/delve into issues in depth</li>
 			<li>Periodic guest speaker events by researchers, or industry professionals</li>
 			<li>Capstone group project- independent project where students analyze and understand a global issue relevant to their community</li>
@@ -152,6 +155,10 @@
 <div class="container">
 	<h1>Frequently Asked Questions</h1>
 	<div class="qa-box">
+			<p class="question">What kind of topics do you discuss in the seminar?</p>
+			<p>We discuss the intruiging, often overlooked, ethical issues present at the intersection of fields. We take student input each week to ensure we cover topics relevant to each group. Past examples include: COVID-19, data ethics, and environmentalism. You can find a log of our discussed topics on <a href="https://www.facebook.com/bigideasglobalseminar" target="_blank">our facebook page</a>.</p>
+		</div>
+	<div class="qa-box">
 		<p class="question">What information about students do you collect and what measures are taken to ensure safety/privacy?</p>
 		<p>We collect only student & parent emails to communicate and send reminders and schedules. Only three people will have access to the emails: the program director, the communications director & the student's facilitator. We take privacy very seriously and will not share student or parent information with anyone else. Parents will be CC'd on any individual emails to students and will also receive updates about the program. </p>
 	</div>
@@ -168,9 +175,9 @@
 
 <div class="container-out container-out-dark" id="signup">
 <div class="container">
-	<h1>Sign Up</h1>
+	<h1>Sign Up for Fall 2020</h1>
 	<p>After you sign-up below, we will get back to you within a couple of weeks. There will an informational session with more details about the program and after you attend, you can sign-up for a seminar timing. We have several different seminar timings (weekdays, weekends, mornings, evenings, etc) so you will likely find a time that works for you. </p>
-	<div class="but-center"><a href="https://tinyurl.com/bigideas2020signup" target="_blank" class="button">Sign Up</a></div>
+	<div class="but-center"><a href="https://tinyurl.com/bigideasfall2020" target="_blank" class="button">Sign Up</a></div>
 </div>
 </div>
 
