summer pilot program

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 <div class="container-out" id="about">
 <div class="container">
 	<h1>About</h1>
-	<p>Big Ideas is a volunteer-run, <b>free</b> online program over one semester of the school year for incoming 9th and 10th-grade students that promotes discourse and awareness about key global issues. Through the eight week session, students meet online each week for a seminar led by college facilitators and discuss a new global issue each session- from the ethics of genetic engineering to economic inequality. Students have a chance to pose ethical questions, share their perspectives, and hear different ideas and stories. We are an interdisciplinary program, connecting and discussing issues in STEM, humanities, and the social sciences.</p>
-	<p>Why? 78% of teachers believe critical thinking as the most important skill a high school student can have. But if you remember back to memorizing vocabulary words for the SAT or cramming formulas for an AP exam,  school & the college admissions process doesn't always promote that kind of thinking.</p>
-	<p>Our goal is to get students to think critically and deal with ambiguity. Issues are complex, messy, and nuanced and that's what makes learning so interesting!</p>
+	<p>Big Ideas is a volunteer-run, <b>free</b> online program over one semester of the school year for incoming 9th, 10th, and 11th-grade students that promotes discourse and awareness about key global issues. Through the eight week session, students meet online twice a week for seminars led by college facilitators and discuss a new global issue each session- from the ethics of genetic engineering to economic inequality. Students have a chance to pose ethical questions, share their perspectives, and hear different ideas and stories. We are an interdisciplinary program, connecting and discussing issues in STEM, humanities, and the social sciences.</p>
+	<p>Why? 78% of teachers believe critical thinking as the most important skill a high school student can have. But if you remember back to memorizing vocabulary words for the SAT or cramming formulas for an AP exam,  school & the college admissions process doesn't always promote that kind of thinking. Our goal is to get students to think critically and deal with ambiguity. Issues are complex, messy, and nuanced and that's what makes learning so interesting!</p>
+	<p>After our Summer 2020 pilot program, we're excited to provide students an engaging, structured program experience this fall. Thank you to our partners in schools, community education programs, and nonprofits for their support.</p>
 	<h2>Goals</h2>
 	<div class="row row-1">
 		<div class="num-card-item">
@@ -108,7 +108,7 @@
 
 <div class="container-out" id="program">
 <div class="container">
-	<h1>Program</h1>
+	<h1>Fall 2020 Program</h1>
 	<div class="table-scroll">
 	<table class="table">
 	  <tr>
@@ -156,7 +156,7 @@
 	<h1>Frequently Asked Questions</h1>
 	<div class="qa-box">
 			<p class="question">What kind of topics do you discuss in the seminar?</p>
-			<p>We discuss the intruiging, often overlooked, ethical issues present at the intersection of fields. We take student input each week to ensure we cover topics relevant to each group. Past examples include: COVID-19, data ethics, and environmentalism. You can find a log of our discussed topics on <a href="https://www.facebook.com/bigideasglobalseminar" target="_blank">our facebook page</a>.</p>
+			<p>We discuss the intruiging, often overlooked, ethical issues present at the intersection of fields. We take student input each week to ensure we cover topics relevant to each group. Past examples from our Summer 2020 pilot program include: COVID-19, data ethics, and environmentalism. You can find a log of our discussed topics on <a href="https://www.facebook.com/bigideasglobalseminar" target="_blank">our facebook page</a>.</p>
 		</div>
 	<div class="qa-box">
 		<p class="question">What information about students do you collect and what measures are taken to ensure safety/privacy?</p>
