--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 	<div class="land-text-box">
 		<div>
 		<h1>Big Ideas: Global Issues Seminar</h1>
-		<h2>Mid-September 2020 to Mid-December 2020</h2>
+		<h2>September 15th, 2020 to December 15th, 2020</h2>
 		<div>
 			<a href="https://tinyurl.com/bigideasfall2020" target="_blank" class="button">Sign Up</a>
 	</div>
@@ -113,7 +113,7 @@
 	<table class="table">
 	  <tr>
 	  	<th>Dates</th>
-	  	<td><p>Mid-September 2020 to Mid-December 2020 (tentative)</p></td>
+	  	<td><p>September 15th, 2020 to December 15th, 2020 (tentative)</p></td>
 	  </tr>
 	  <tr>
 	  	<th>Meeting times (PST)</th>
