--- a/index.html
+++ b/index.html
@@ -69,9 +69,14 @@
 	<div class="land-text-box">
 		<div>
 		<h1>Big Ideas: Global Issues Seminar</h1>
-		<h2>September 26th, 2020 to December 15th, 2020</h2>
+		<h2><b>Fall 2020:</b> Sept. 26th to Dec. 15th, 2020</h2>
 		<div>
-			<a href="https://tinyurl.com/bigideasfall2020" target="_blank" class="button">Sign Up</a>
+			<a href="https://tinyurl.com/bigideasfall2020" target="_blank" class="button">Fall Sign Up</a>
+	</div>
+	<h2><b>Spring & Summer 2021:</b> TBD</h2>
+	<div>
+			<a href="https://tinyurl.com/bigideasspring2021" target="_blank" class="button">Spring Sign Up</a>
+			<a href="https://tinyurl.com/bigideassummer2021" target="_blank" class="button">Summer Sign Up</a>
 	</div>
 	</div>
 	</div>
@@ -113,11 +118,11 @@
 	<table class="table">
 	  <tr>
 	  	<th>Dates</th>
-	  	<td><p>September 26th, 2020 to December 15th, 2020 (tentative)</p></td>
+	  	<td><p>September 26th, 2020 to December 15th, 2020</p></td>
 	  </tr>
 	  <tr>
 	  	<th>Meeting times (PST)</th>
-	  	<td><p>TBD, multiple session times will be offered</p></td>
+	  	<td><p>Multiple session times offered</p></td>
 	  </tr>
 	  <tr>
 	  	<th>Student eligibility</th>
@@ -176,8 +181,16 @@
 <div class="container-out container-out-dark" id="signup">
 <div class="container">
 	<h1>Sign Up for Fall 2020</h1>
-	<p>After you sign-up below, we will get back to you within a couple of weeks. There will an informational session with more details about the program and after you attend, you can sign-up for a seminar timing. We have several different seminar timings (weekdays, weekends, mornings, evenings, etc) so you will likely find a time that works for you. </p>
-	<div class="but-center"><a href="https://tinyurl.com/bigideasfall2020" target="_blank" class="button">Sign Up</a></div>
+	<p>After you sign-up below, we will get back to you within a couple of weeks. There will be an informational session with more details about the program and after you attend, you can sign-up for a seminar timing. We have several different seminar timings (weekdays, weekends, mornings, evenings, etc) so you will likely find a time that works for you. </p>
+	<div class="but-center"><a href="https://tinyurl.com/bigideasfall2020" target="_blank" class="button">Fall Sign Up</a></div>
+</div>
+<div class="container">
+	<h1>Sign Up for Spring or Summer 2021</h1>
+	<p>Dates and times for the Spring 2021 and Summer 2021 program are not yet determined, although the program will follow the same format as Fall 2020. We're accepting early sign-ups and will reach out several weeks before the start of the programs with further details.</p>
+	<div class="but-center">
+		<a href="https://tinyurl.com/bigideasspring2021" target="_blank" class="button">Spring Sign Up</a>
+		<a href="https://tinyurl.com/bigideassummer2021" target="_blank" class="button">Summer Sign Up</a>
+	</div>
 </div>
 </div>
 
